--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "bin": "./bin/cli/js",
   "scripts": {
     "dev": "nodemon src/server",
-    "start": "node src/server"
+    "start": "node src/server",
+    "reset:migrate": "node ./src/tests/testMigrate.js",
+    "test": "jest --detectOpenHandles",
+    "pretest": "npm run reset:migrate"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +27,8 @@
     "sequelize-cli": "6.6.2"
   },
   "devDependencies": {
-    "nodemon": "3.1.7"
+    "jest": "29.7.0",
+    "nodemon": "3.1.7",
+    "supertest": "7.0.0"
   }
 }
